--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,4 +1,4 @@
-@import "bootstrap";
+
 
 .booyah-box {
     -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
@@ -25,4 +25,10 @@ body {
 .navbar {
     background: image_url('darkness.png');
     box-shadow: 10px 10px 5px grey;
+}
+
+.navbar-inverse .navbar-brand {
+    color: #F2F6FA;
+    font-family: 'kaushan_scriptregular';
+    font-size: 26px;
 }
