--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,4 +1,5 @@
-
+@import "bootstrap";
+@import "font-awesome";
 
 .booyah-box {
     -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
@@ -33,6 +34,3 @@ body {
     font-size: 26px;
 }
 
-.will_paginate {
-   
-}
