Changes to pagination

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -33,3 +33,10 @@ body {
     font-family: 'kaushan_scriptregular';
     font-size: 26px;
 }
+
+.pagination {
+    padding: 0.2em 0.5em;
+    display: block;
+    float: left;
+    margin-right: 1px; 
+}
