--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,6 +1,6 @@
-<h1>Locations</h1>
+<h2>Places</h2>
 
-<%= will_paginate @places %>
+<%= @places = Place.paginate(page: params[:page]) %>
 
 <% @places.each do |place| %>
     <div class="booyah-box col-10 offset-1">
@@ -13,5 +13,4 @@
             <small><%= place.user.email %></small>
         <% end %>
     </div>
-
 <% end %>
