--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,6 +1,6 @@
 <h2>Places</h2>
 
-<%= @places = Place.paginate(page: params[:page]) %>
+<%= will_paginate @places %>
 
 <% @places.each do |place| %>
     <div class="booyah-box col-10 offset-1">
