--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -42,6 +42,12 @@
   </div>
 </div>
 
+<div class="clear"></div>
+
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+  Add a comment
+</button>
 
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -67,8 +73,6 @@
       </div>
     </div>
   </div>
-
-
 
 <div class="col-10 offset-1">
 <h1 class="float-left">Comments</h1>
