--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -42,12 +42,18 @@
   </div>
 </div>
 
-<div class="clear"></div>
+<br />
 
+<div class="col-10 offset-1">
+<h1 class="float-left">Comments</h1>
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+<button type="button" class="btn btn-primary btn-lg float-right" data-toggle="modal" data-target="#myModal">
   Add a comment
 </button>
+</div>
+
+<br />
+
 
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -74,13 +80,6 @@
     </div>
   </div>
 
-<div class="col-10 offset-1">
-<h1 class="float-left">Comments</h1>
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary btn-lg float-right" data-toggle="modal" data-target="#myModal">
-  Add a comment
-</button>
-</div>
 
 <div class="clear"></div>
 
@@ -97,3 +96,11 @@
   </div>
   </div>
 <% end %>
+
+<br />
+
+<%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
+  <%= f.input :captions %>
+  <%= f.submit "Add a Photo", class: 'btn btn-primary' %>
+<% end %>
+
