--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -99,8 +99,13 @@
 
 <br />
 
+<% @place.photos.each do |photo| %>
+<% end %>
+
 <%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
   <%= f.input :captions %>
+  <%= f.input :picture %>
   <%= f.submit "Add a Photo", class: 'btn btn-primary' %>
 <% end %>
+
 
