--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -100,13 +100,24 @@
 <br />
     
 
-<% @place.photos.each do |photo| %>
-<% end %>
-
 <%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
   <%= f.input :captions %>
   <%= f.input :picture %>
   <%= f.submit "Add a Photo", class: 'btn btn-primary' %>
 <% end %>
+
+<% @place.photos.each do |photo| %>
+  <div>
+    <blockquote>
+      <b><%= photo.captions %></b> -
+        <%= image_tag photo.picture.url %>
+      <small><%= photo.user.email %></small>
+    </blockquote>
+  </div>
+<% end %>
+
+<br />
+<br />
+
 
 
