--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -26,12 +26,14 @@ body {
 .navbar {
     background: image_url('darkness.png');
     box-shadow: 10px 10px 5px grey;
+    margin-bottom: 0;
 }
 
 .navbar-inverse .navbar-brand {
     color: #F2F6FA;
     font-family: 'kaushan_scriptregular';
     font-size: 26px;
+    margin-bottom: 0;
 }
 
 .pagination {
@@ -77,7 +79,22 @@ blockquote p {
     display: inline;
   }
 
-.d-block  {
-    width: 940px;
-    height: 360px;
+.carousel-inner > .carousel-item > img, .carousel-inner > .carousel-item > a > img  {
+    max-height: 550px;
+    width: 100%;
+}
+
+.carousel-caption {
+    font-family: 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: 60px;
+    font-weight: 100;
+    text-shadow: rgba(0, 0, 0, 0.95) 2px 2px;
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    position: absolute;
+    left: 0;
+}
+
+.carousel {
+    box-shadow: 0px 3px 8px #2a2a2a;
 }
