--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -36,7 +36,7 @@
 
   <div class="float-right">
     <% if current_user && current_user == @place.user %>
-      <%= link_to 'Add a Photo', place_photos_path(@place), class: 'btn btn-primary' %>
+      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#uploadModal">Add a Photo</button>
       <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
        <%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'}, class: 'btn btn-danger' %>
     <% end %>
@@ -102,7 +102,6 @@
 <br />
 <br />
 
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#uploadModal">Add a Photo</button>
 
 <!-- Modal -->
 <div id="uploadModal" class="modal fade" role="dialog">
@@ -132,7 +131,7 @@
   <div>
     <blockquote>
       <b><%= photo.caption %></b> -
-        <%= image_tag photo.picture.url %> 
+        <%= image_tag photo.picture.url, :class=>"small-pic"%> 
       <small><%= photo.user.email %></small>
     </blockquote>
   </div>
